--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/app/express/index.js",
     "dev": "nodemon src/app/express/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-dev-server": "nodemon src/bin/start-server.js --color"
   },
   "keywords": [],
   "author": "",
