--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.7.2",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
-    "morgan": "^1.10.1"
+    "knex": "^3.1.0",
+    "map-obj": "^4.3.0",
+    "morgan": "^1.10.1",
+    "pg": "^8.16.3",
+    "pug": "^3.0.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "blue-tape": "^1.0.0",
     "nodemon": "^3.1.10"
   }
 }
