--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,3 +6,7 @@ services:
       - POSTGRES_HOST_AUTH_METHOD=trust
     ports:
       - '0.0.0.0:5432:5432'
+  message-db:
+    image: ethangarofolo/message-db:1.3.1
+    ports:
+      - '0.0.0.0:5433:5432'
