--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bluebird": "^3.7.2",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
@@ -24,10 +25,13 @@
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "pug": "^3.0.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "blue-tape": "^1.0.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "snakecase-keys": "^8.1.0",
+    "supertest": "^7.1.4"
   }
 }
