--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "bcrypt": "^6.0.0",
     "bluebird": "^3.7.2",
     "colors": "^1.4.0",
+    "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
+    "email-templates": "^12.0.3",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "knex": "^3.1.0",
