--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "knex": "^3.1.0",
     "map-obj": "^4.3.0",
     "morgan": "^1.10.1",
+    "nodemailer-pickup-transport": "^0.1.1",
     "pg": "^8.16.3",
     "pug": "^3.0.3",
     "uuid": "^8.3.2",
