Fix: Update npm start command to use correct server entry point                                                                                 │ │                                                                                                                                                                                          │ │   The start script was pointing to src/app/express/index.js which only exports                                                                                                           │ │   the Express app factory but doesn't bind to a port. Changed to use                                                                                                                     │ │   src/bin/start-server.js which calls the start() function that executes                                                                                                                 │ │   app.listen() to properly bind the server to the configured port.                                                                                                                       │ │                                                                                                                                                                                          │ │   This fixes DigitalOcean App Platform health check failures.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "npm": "10.x"
   },
   "scripts": {
-    "start": "node src/app/express/index.js",
-    "dev": "nodemon src/app/express/index.js",
+    "start": "node src/bin/start-server.js",
+    "dev": "nodemon src/bin/start-server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev-server": "nodemon src/bin/start-server.js --color",
     "build": "echo 'No build needed'",
