--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev-server": "nodemon src/bin/start-server.js --color",
     "build": "echo 'No build needed'",
-    "migrate": "npx knex migrate:latest"
+    "migrate": "npx knex migrate:latest",
+    "install-message-store": "node scripts/install-message-store.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@eventide/message-db": "^1.3.0",
     "bcrypt": "^6.0.0",
     "bluebird": "^3.7.2",
     "colors": "^1.4.0",
